# Random-Head

./: .cproject  .project
Example/: Changes  Example.c  Example.xs  MANIFEST  Makefile  Makefile.PL  Makefile.old  README  test.pl
Example/blib/man3/: Example.3pm
Example/lib/: Example.pm
Example/t/: Example.t
XS/YATK-DB-YADB/: Changes  MANIFEST  MANIFEST.bak  Makefile.PL  README  YADB.xs  typemap
XS/YATK-DB-YADB/lib/YATK/DB/: YADB.pm
XS/YATK-DB-YADB/script/: yadb.pl
XS/YATK-DB-YADB/t/: YATK-DB-YADB.t
XS/root/include/: priv_types.h  pub_types.h  yadb.h
XS/root/lib/: libyadb.la  libyadb.so.1.0.0
XS/yadb/: Makefile.in  configure  configure.ac
XS/yadb/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
XS/yadb/src/: Makefile.am  Makefile.in  version.txt  yadb.c  yadb_data.c  yadb_data.h
summoner/: Makefile  bat.cpp  bat.h  dragon.cpp  dragon.h  main.cpp  monster.cpp  monster.h  serpent.cpp  serpent.h  summoner.cpp  summoner.h  summoner.pro
summoner/lib/: compile.txt
yatk/: yadb
yatk/db/: Makefile  README  database.ydb  db.pro  libyadb.so.1.0.0  main.c  pub_types.h  teste  yadb.c  yadb.h  yadb_data.c  yadb_data.h
yatk/test/: foo.bak  main.c  main.cpp
zoo/: zoo.pro
zoo/prj/cat/: Makefile  cat.pro
zoo/src/: cat.cpp  cat.h  dog.cpp  dog.h  pet.h
