lib_LTLIBRARIES             =   libyadb.la

libyadb_la_includedir       =   $(prefix)/include

libyadb_la_include_HEADERS  =   yadb.h \
                                yadb_data.h \
                                pub_types.h \
                                priv_types.h

libyadb_la_SOURCES          =   yadb.c \
                                yadb_data.c

libyadb_la_LDFLAGS          = -version-info 1:0:0